# RailOSConsist

./: .gitignore  .pre-commit-config.yaml  BUILD_INSTRUCTIONS.md  CHANGELOG.md  Cargo.toml  README.md  RailOSConsist.spec  build.rs  build.sh  icon.rc  prek.toml  pyproject.toml
.github/workflows/: release.yml  test_build.yml
data/be/: electric_multiple_units.json
data/ch/: standard_gauge_electric_multiple_units.json
data/gb/: diesel_multiple_units.json  electric_multiple_units.json  light_rail_units.json
data/lu/: rolling_stock.json
railos_consist/: __init__.py  common.py  gui.py  railosconsist.py
railos_consist/data/: __init__.py  library.py
railos_consist/data/gb/: diesel_multiple_units.json  electric_multiple_units.json  light_rail_units.json
railos_consist/data/lu/: rolling_stock.json
railos_consist/data/uk/: __init__.py  dmus.csv  emus.csv
src/: main.rs
src/railos_consist/: gui.py  railosconsist.py
src/railos_consist/data/: library.py
src/railos_consist/data/be/: electric_multiple_units.json
src/railos_consist/data/gb/: electric_multiple_units.json
tests/: test_railos_consist.py
