[project]
name = "railos-consist"
version = "1.3.0"
description = "RailOS Consist assembler tool"
authors = [
    {name = "Kristian Zarębski",email = "krizar312@gmail.com"}
]
license = {text = "GPL-v3"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pysimplegui>=3.60.4",
    "pyperclip>=0.8.2",
    "railostools @ git+https://github.com/Railway-Op-Sim/railostools.git@v0.6.0#subdirectory=python"
]

[project.scripts]
railosconsist = 'railos_consist.railosconsist:launch_application'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
ruff = "^0.11.0"
pyinstaller = "^6.12.0"

