[project]
name = "railos-consist"
version = "2.0.0"
description = "RailOS Consist assembler tool"
authors = [
    {name = "Kristian Zarębski",email = "krizar312@gmail.com"}
]
license = {text = "GPL-v3"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "railostools @ git+https://github.com/Railway-Op-Sim/railostools.git@v0.6.0#subdirectory=python",
    "pyperclip (>=1.9.0,<2.0.0)",
    "freesimplegui (>=5.2.0,<6.0.0)",
]

[project.scripts]
railosconsist = 'railos_consist.railosconsist:launch_application'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
ruff = "^0.11.0"
pyinstaller = "^6.12.0"

